# explore_fitness

./: About Dataset.md  README.md  instructions  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: About Dataset.md  bodyPerformance_cleaned.gzip
notebooks/: 0_BodyPerformanceExploration.ipynb  0_WellbeingDataExploration.ipynb  2_Analysis.ipynb
