[tool.poetry]
name = "explore-fit"
version = "0.1.0"
description = ""
authors = ["Henriette Wevell <henriette.wevellc@gmail.com>"]
readme = "README.md"
packages = [{include = "explore_fit"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
